Fix distance not showing

--- a/static/index.css
+++ b/static/index.css
@@ -49,3 +49,15 @@ tr:hover {
 td:hover {
     background-color: #444;
 }
+
+a:link, a:visited {
+    text-decoration: none;
+}
+
+a:hover, a:active {
+    text-decoration: underline;
+}
+
+a {
+    color: var(--white);
+}
